--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is the folder to store our server for the Internship Review Project.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -13,5 +13,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
-  }
+  },
+  "keywords": []
 }
